# sqlmate

./: .dockerignore  .gitignore  Dockerfile  TECHNICAL_SURVEY.md  docker-compose.yaml  install_dev.sh  pyproject.toml
backend/: requirements.txt
backend/src/: app.py
backend/src/classes/: database.py  metadata.py
backend/src/classes/database/: base.py  mysql.py
backend/src/classes/queries/: base.py  update.py
backend/src/routers/: auth.py  query.py  user_data.py
backend/src/utils/: constants.py  db.py  generators.py  serialization.py
cli/: cli.py
cli/docker/: docker-compose.yaml
cli/setup/: db_setup.py  env_setup.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: middleware.ts  next.config.js  package-lock.json  package.json
frontend/public/: db_schema.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/my-tables/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: authInit.tsx  consolePanel.tsx  header.tsx  queryResultTable.tsx  studioCanvas.tsx  tableCustomizationPanel.tsx  tablePanel.tsx  tableUpdatePanel.tsx
frontend/src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  (+2 more)
frontend/src/hooks/: useEmbeddedAuth.ts
frontend/src/lib/: apiClient.tsx  schema.ts
sqlmate.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/sqlmate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sqlmate/backend/: main.py  startup.py
src/sqlmate/cli/: __main__.py  cli.py
(+21 files in other folders)
