[project]
name = "sqlmate"
version = "0.1.0"
description = "A simple CLI for running the SQLMate Docker app"
authors = [{name = "James Kendrick", email = "jlkendric@yahoo.com"}]
dependencies = []

[project.scripts]
sqlmate = "cli.__main__:main"

[tool.setuptools]
packages = ["cli", "backend", "backend.src", "backend.src.utils", "backend.src.classes", 
           "backend.src.classes.database", "backend.src.classes.queries", "backend.src.routers"]