[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlmate"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "annotated-types>=0.7.0",
  "anyio>=4.9.0",
  "cffi>=1.17.1",
  "click>=8.2.1",
  "cryptography>=45.0.3",
  "fastapi>=0.115.0",
  "h11>=0.16.0",
  "idna>=3.10",
  "mysql-connector-python>=9.3.0",
  "psycopg2-binary>=2.9.9",
  "pycparser>=2.22",
  "SQLAlchemy>=2.0.29",
  "pydantic>=2.11.5",
  "pydantic_core>=2.33.2",
  "PyJWT>=2.10.1",
  "python-dotenv>=1.1.0",
  "requests>=2.31.0",
  "pytz>=2025.2",
  "sniffio>=1.3.1",
  "starlette>=0.46.2",
  "typing-inspection>=0.4.1",
  "typing_extensions>=4.13.2",
  "uvicorn>=0.34.2",
]

[project.scripts]
sqlmate = "sqlmate.cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]